--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                         <input type="email" name="email" class="form-control" placeholder="Email address">
                         <textarea class="form-control" name="message" id="message" placeholder="Message" style="resize: none; height: 200px;"></textarea>
                         <div class="col col-auto">
-                            <button class="main-btn secondary-btn border-white mb-3" name="myButton" type="submit">Send</button>
+                            <button class="main-btn secondary-btn border-white mb-3" name="myButton" type="submit" onclick="alert('Thank You, We will reach you soon');">Send</button>
                         </div>
                     </form>
                     <!-- Contact Form end -->
