--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eswar V Portfolio</title>
-    
+    <link rel="shortcut icon" href="images/icon.jpg" type="image/x-icon">
     <!-- Bootstrap CDN Links -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -60,7 +60,7 @@
                     <h1 class="text-uppercase">This is Eswar</h1>
                     <h5 class="text-uppercase">Web developer and Programmer</h5>
                     <div class="mt5">
-                        <a href="#" class="main-btn secondary-btn">Contact me</a>
+                        <a href="#contact" class="main-btn secondary-btn">Contact me</a>
                     </div>
                 </div>
                 <div class="col-lg-5 order-lg-2 order-1">
