--- a/works.html
+++ b/works.html
@@ -57,7 +57,37 @@
             </div>
         </div>
     </section>
-
+    <!-- Contact and footer-->
+    <section class="footer_wrapper mt-3 mt md-0" id="contact">
+        <div class="container mt-5">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-12 text-center">
+                    <!-- <div class="footer-logo mb-3 mb-md-0">
+                        <img src="images/logo.jpg" alt="footer" class="img-fluid">
+                    </div> -->
+                    <div class="social-icons my-4">
+                        <h5 style="color: #3333cc;;">Follow me on</h5>
+                        <ul class="list-unstyled d-flex justify-content-center align-items-center">
+                            <li><a href="https://www.instagram.com/eswarv58/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/eswar-p585858/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="https://github.com/eswarv-58" target="_blank"><i class="fab fa-github"></i></a></li>
+                            <li><a href="https://twitter.com/ESWARV58" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://api.whatsapp.com/send?phone=916301956397" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-0 col-sm-12">
+                    <p class="footer-text text-center my-2" style="font-size: 20px;">
+                        Thank You For Visting
+                    </p>
+                    <p class="footer-text text-center my-2">
+                        ESWAR V
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Contact and footer end -->
     <!-- Bootstrap CDN Links -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
