--- a/works.html
+++ b/works.html
@@ -59,9 +59,9 @@
                     <div class="social-icons my-4">
                         <h5 style="color: #3333cc;;">Follow me on</h5>
                         <ul class="list-unstyled d-flex justify-content-center align-items-center">
-                            <li><a href="https://www.instagram.com/eswarv58/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://www.instagram.com/eswarv55/" target="_blank"><i class="fab fa-instagram"></i></a></li>
                             <li><a href="https://www.linkedin.com/in/eswar-p585858/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                            <li><a href="https://github.com/eswarv-58" target="_blank"><i class="fab fa-github"></i></a></li>
+                            <li><a href="https://github.com/eswar-vadla" target="_blank"><i class="fab fa-github"></i></a></li>
                             <li><a href="https://twitter.com/ESWARV58" target="_blank"><i class="fab fa-twitter"></i></a></li>
                             <li><a href="https://api.whatsapp.com/send?phone=916301956397" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
                         </ul>
